--- a/app/pages/knowledge_opt.html
+++ b/app/pages/knowledge_opt.html
@@ -21,7 +21,14 @@
 				<div id="editor">
 				</div>
 			</div>
-
+			<div class="form-group">
+				<label for="title">关键字</label>
+				<input type="text" class="form-control" id="keywords">
+			</div>
+			<div class="form-group">
+				<label for="title">描述</label>
+				<input type="text" class="form-control" id="description">
+			</div>
 			<div class="form-group">
 				<label for="departmentList">科室</label>
 				<select class="form-control" id="departmentList">
