--- a/app/pages/article_opt.html
+++ b/app/pages/article_opt.html
@@ -17,13 +17,21 @@
 					<input type="text" class="form-control" id="title">
 			</div>
 			<div class="form-group">
-				<label for="summary" >描述</label>
+				<label for="summary" >简介</label>
 					<textarea type="text" class="form-control" id="summary"></textarea>
 			</div>
 			<div class="form-group">
 				<label  >内容</label>
 				<div id="editor">
 				</div>
+			</div>
+			<div class="form-group">
+				<label for="title" >关键字</label>
+					<input type="text" class="form-control" id="keywords">
+			</div>
+			<div class="form-group">
+				<label for="summary" >描述</label>
+					<textarea type="text" class="form-control" id="description"></textarea>
 			</div>
 			<div class="form-group">
 				<label for="author" >作者</label>
