--- a/app/pages/caseCenter_opt.html
+++ b/app/pages/caseCenter_opt.html
@@ -6,10 +6,10 @@
 		<form class="form-horizontal" role="form">
 			<div class="form-group">
 				<label for="language">语言</label>
-					<select class="form-control" id="language">
-						<option value="cn">中文</option>
-						<option value="en">英文</option>
-					</select>
+				<select class="form-control" id="language">
+					<option value="cn">中文</option>
+					<option value="en">英文</option>
+				</select>
 			</div>
 			<div class="form-group">
 				<label for="departmentList">科室</label>
@@ -17,12 +17,25 @@
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="title" >标题</label>
-					<input type="text" class="form-control" id="title">
+				<label for="title">标题</label>
+				<input type="text" class="form-control" id="title">
 			</div>
 			<div class="form-group">
-				<label for="summary" >描述</label>
-					<textarea type="text" class="form-control" id="summary"></textarea>
+				<label for="summary">简介</label>
+				<textarea type="text" class="form-control" id="summary"></textarea>
+			</div>
+			<div class="form-group">
+				<label  >内容</label>
+				<div id="editor">
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="title">关键字</label>
+				<input type="text" class="form-control" id="keywords">
+			</div>
+			<div class="form-group">
+				<label for="summary">描述</label>
+				<textarea type="text" class="form-control" id="description"></textarea>
 			</div>
 			<!--<div class="form-group">
 				<label  >内容</label>
@@ -30,41 +43,41 @@
 				</div>
 			</div>-->
 			<div class="form-group">
-				<label for="author" >作者</label>
-					<input type="text" class="form-control" id="author">
+				<label for="author">作者</label>
+				<input type="text" class="form-control" id="author">
 			</div>
 			<div class="form-group">
-				<label for="uploadPic" >治疗前图片</label>
+				<label for="uploadPic">治疗前图片</label>
 				<br/>
 				<a class="btn btn-success" id="rollpic_uploadPicBtn">点击上传</a>
 				<input type="file" style="display: none;" name="fileUpload" class="form-control" id="rollpic_uploadPic">
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" ></label>
-					<img width="200px" id="imgPath" src="" />
+				<label for="inputEmail3"></label>
+				<img width="200px" id="imgPath" src="" />
 			</div>
 			<div class="form-group">
-				<label for="uploadPic" >治疗后图片</label>
+				<label for="uploadPic">治疗后图片</label>
 				<br/>
 				<a class="btn btn-success" id="rollpic_uploadPicBtn2">点击上传</a>
 				<input type="file" style="display: none;" name="fileUpload" class="form-control" id="rollpic_uploadPic2">
 			</div>
 			<div class="form-group">
-				<label for="inputEmail3" ></label>
-					<img width="200px" id="imgPath2" src="" />
+				<label for="inputEmail3"></label>
+				<img width="200px" id="imgPath2" src="" />
 			</div>
-			
-					<div class="box-foot">
-						<div class="row">
-							<div class="col-md-6"></div>
-							<div class="col-md-2">
-								<button type="button" class="btn btn-danger" id="articleBoxCancel">返回</button>
-							</div>
-							<div class="col-md-2">
-								<button type="button" class="btn btn-success" id="articleBoxSubmit">保存</button>
-							</div>
-						</div>
+
+			<div class="box-foot">
+				<div class="row">
+					<div class="col-md-6"></div>
+					<div class="col-md-2">
+						<button type="button" class="btn btn-danger" id="articleBoxCancel">返回</button>
 					</div>
+					<div class="col-md-2">
+						<button type="button" class="btn btn-success" id="articleBoxSubmit">保存</button>
+					</div>
+				</div>
+			</div>
 		</form>
 
 	</div>
