--- a/app/tpl/article_opt.html
+++ b/app/tpl/article_opt.html
@@ -16,7 +16,7 @@
 		</div>
 	</div>
 	<div class="form-group">
-		<label for="summary" class="col-sm-2 control-label">描述</label>
+		<label for="summary" class="col-sm-2 control-label">简介</label>
 		<div class="col-sm-10">
 			<textarea type="text" class="form-control" id="summary"></textarea>
 		</div>
@@ -28,7 +28,18 @@
 				</div>
 		</div>
 	</div>
-
+	<div class="form-group" >
+		<label for="specialty" class="col-sm-2 control-label">关键字</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="keywords">
+		</div>
+	</div>
+		<div class="form-group" >
+		<label for="specialty" class="col-sm-2 control-label">描述</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="description">
+		</div>
+	</div>
 	<div class="form-group">
 		<label for="rollpic_uploadPic" class="col-sm-2 control-label">图片</label>
 		<div class="col-sm-10">
