--- a/app/tpl/department_opt.html
+++ b/app/tpl/department_opt.html
@@ -33,6 +33,19 @@
 			<textarea type="text" class="form-control" id="technical"></textarea>
 		</div>
 	</div>
+	
+	<div class="form-group" >
+		<label for="specialty" class="col-sm-2 control-label">关键字</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="keywords">
+		</div>
+	</div>
+		<div class="form-group" >
+		<label for="specialty" class="col-sm-2 control-label">描述</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="description">
+		</div>
+	</div>
 	<div class="form-group">
 		<label for="uploadPic" class="col-sm-2 control-label">标题图片</label>
 		<div class="col-sm-10">
