--- a/app/tpl/doctor_opt.html
+++ b/app/tpl/doctor_opt.html
@@ -57,6 +57,18 @@
 			<input type="text" class="form-control" id="specialty">
 		</div>
 	</div>
+	<div class="form-group" >
+		<label for="specialty" class="col-sm-2 control-label">关键字</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="keywords">
+		</div>
+	</div>
+		<div class="form-group" >
+		<label for="specialty" class="col-sm-2 control-label">描述</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="description">
+		</div>
+	</div>
 	<div class="form-group">
 		<label for="uploadPic" class="col-sm-2 control-label">头像</label>
 		<div class="col-sm-10">
